--- a/references.bib
+++ b/references.bib
@@ -108,8 +108,8 @@
    publisher={American Astronomical Society},
    author={Xu, Guohong},
    year={1995},
-   month=may, 
-   pages={355} 
+   month=may,
+   pages={355}
 }
 
 
@@ -263,8 +263,8 @@
 
 @ARTICLE{Ruth1983,
   author={Ruth, Ronald D.},
-  journal={IEEE Transactions on Nuclear Science}, 
-  title={A Canonical Integration Technique}, 
+  journal={IEEE Transactions on Nuclear Science},
+  title={A Canonical Integration Technique},
   year={1983},
   volume={30},
   number={4},
@@ -297,19 +297,6 @@
   url       = {https://doi.org/10.1038/324446a0},
   issn      = {1476-4687},
   abstract  = {Until recently the gravitational N-body problem has been modelled numerically either by direct integration, in which the computation needed increases as N2, or by an iterative potential method in which the number of operations grows as N log N. Here we describe a novel method of directly calculating the force on N bodies that grows only as N log N. The technique uses a tree-structured hierarchical subdivision of space into cubic cells, each of which is recursively divided into eight subcells whenever more than one particle is found to occupy the same cell. This tree is constructed anew at every time step, avoiding ambiguity and tangling. Advantages over potential-solving codes are: accurate local interactions; freedom from geometrical assumptions and restrictions; and applicability to a wide class of systems, including (proto-)planetary, stellar, galactic and cosmological ones. Advantages over previous hierarchical tree-codes include simplicity and the possibility of rigorous analysis of error. Although we concentrate here on stellar dynamical applications, our techniques of efficiently handling a large number of long-range interactions and concentrating computational effort where most needed have potential applications in other areas of astrophysics as well.}
-}
-@article{Rokhlin1985,
-title = {Rapid solution of integral equations of classical potential theory},
-journal = {Journal of Computational Physics},
-volume = {60},
-number = {2},
-pages = {187-207},
-year = {1985},
-issn = {0021-9991},
-doi = {https://doi.org/10.1016/0021-9991(85)90002-6},
-url = {https://www.sciencedirect.com/science/article/pii/0021999185900026},
-author = {V Rokhlin},
-abstract = {An algorithm is described for rapid solution of classical boundary value problems (Dirichlet an Neumann) for the Laplace equation based on iteratively solving integral equations of potential theory. CPU time requirements for previously published algorithms of this type are proportional to n2, where n is the number of nodes in the discretization of the boundary of the region. The CPU time requirements for the algorithm of the present paper are proportional to n, making it considerably more practical for large scale problems.}
 }
 
 @book{Allen2017,
@@ -345,10 +332,10 @@ pages = {531--534},
 year = {1992},
 publisher = {Taylor \& Francis},
 doi = {10.1080/00207179208934253},
-URL = { 
+URL = {
         https://doi.org/10.1080/00207179208934253
 },
-eprint = { 
+eprint = {
         https://doi.org/10.1080/00207179208934253
 }
 
@@ -369,8 +356,8 @@ eprint = {
 
 @INPROCEEDINGS{Kuznetsov2005,
   author={Kuznetsov, N.V. and Leonov, G.A.},
-  booktitle={Proceedings. 2005 International Conference Physics and Control, 2005.}, 
-  title={On stability by the first approximation for discrete systems}, 
+  booktitle={Proceedings. 2005 International Conference Physics and Control, 2005.},
+  title={On stability by the first approximation for discrete systems},
   year={2005},
   volume={},
   number={},
@@ -379,7 +366,8 @@ eprint = {
   keywords={Communication system control;Control systems;Asymptotic stability;Linear matrix inequalities;Sufficient conditions;Linear systems;Radio control;Nonlinear systems;Linear approximation;Vectors},
   doi={10.1109/PHYCON.2005.1514053},
   ISSN={},
-  month={Aug},}
+  month={8}
+  }
 
 @article{Oseledec1968,
   author  = {Oseledec, V. I.},
@@ -403,7 +391,7 @@ eprint = {
 doi = {10.1070/RM1977v032n04ABEH001639},
 url = {https://dx.doi.org/10.1070/RM1977v032n04ABEH001639},
 year = {1977},
-month = {aug},
+month = {8},
 publisher = {},
 volume = {32},
 number = {4},
@@ -447,7 +435,7 @@ doi = {10.1007/BF02128236}
    publisher={EDP Sciences},
    author={Quarles, B. and Eberle, J. and Musielak, Z. E. and Cuntz, M.},
    year={2011},
-   month=aug, pages={A2} }
+   month=8, pages={A2} }
 
 @article{Leonov2007,
 author = {Leonov, Gennady and Kuznetsov, Nikolay},
@@ -523,10 +511,10 @@ pages = {85-103},
 year = {1985},
 doi = {10.1137/0906008},
 
-URL = { 
+URL = {
         https://doi.org/10.1137/0906008
 },
-eprint = { 
+eprint = {
         https://doi.org/10.1137/0906008
 }
 ,
@@ -557,10 +545,10 @@ pages = {669-686},
 year = {1988},
 doi = {10.1137/0909044},
 
-URL = {     
+URL = {
         https://doi.org/10.1137/0909044
 },
-eprint = { 
+eprint = {
         https://doi.org/10.1137/0909044
 }
 ,
@@ -664,10 +652,10 @@ pages = {337-346},
 year = {2012},
 doi = {10.1177/1094342011429952},
 
-URL = {     
+URL = {
         https://doi.org/10.1177/1094342011429952
 },
-eprint = { 
+eprint = {
         https://doi.org/10.1177/1094342011429952
 }
 ,
@@ -678,7 +666,7 @@ eprint = {
   author    = {Per-Gunnar Martinsson},
   title     = {Encyclopedia entry on ``Fast Multipole Methods''},
   year      = {2012},
-  month     = {August},
+  month     = {8},
   institution = {University of Colorado at Boulder},
   URL = {https://amath.colorado.edu/faculty/martinss/2014_CBMS/Refs/2012_fmm_encyclopedia.pdf}
 }
@@ -690,7 +678,7 @@ eprint = {
   volume    = {33},
   number    = {4},
   year      = {2000},
-  month     = {Jan/Feb},
+  month     = {2},
   URL       = {https://web.tecnico.ulisboa.pt/~mcasquilho/CD_Casquilho/PRINT/NotebookSC_1LP_22pp.pdf}
 }
 
@@ -699,7 +687,7 @@ eprint = {
   title     = {A short course on fast multipole methods},
   institution = {University of Canterbury and Courant Institute of Mathematical Sciences, New York University},
   year      = {1997},
-  note      = {Short course}, 
+  note      = {Short course},
   URL       = {https://math.nyu.edu/~greengar/shortcourse_fmm.pdf}
 }
 
@@ -732,6 +720,160 @@ abstract = {The present paper describes an algorithm for rapid solution of bound
   number    = {2},
   year      = {2009},
   pages     = {327--345}
+}
+
+@ARTICLE{wisdom1991,
+       author = {{Wisdom}, Jack and {Holman}, Matthew},
+        title = "{Symplectic maps for the N-body problem.}",
+      journal = {The Astronomical Journal},
+     keywords = {Many Body Problem, Planetary Evolution, Pluto (Planet), Astronomical Maps, Gravitational Effects, Physics (General)},
+         year = 1991,
+        month = oct,
+       volume = {102},
+        pages = {1528-1538},
+          doi = {10.1086/115978},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1991AJ....102.1528W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{stuchi2002,
+  author = {Stuchi, T.J.},
+  title = {Symplectic integrators revisited},
+  year = {2002},
+  journal = {Brazilian Journal of Physics},
+  issn = {0103-9733},
+  doi={https://doi.org/10.1590/S0103-97332002000500022},
+  url = {https://www.scielo.br/j/bjp/a/NgqxKCKkBmrC93BgP4FJ4fk/?lang=en#},
+  }
+
+@article{chin2005,
+  author = {Siu A. Chin and C. R. Chen},
+  title = {Forward Symplectic Integrators for Solving Gravitational Few-Body Problems},
+  journal = {Celestial Mechanics and Dynamical Astronomy},
+  year = {2005},
+  volume = {91},
+  number = {3},
+  pages = {301--322},
+  doi = {10.1007/s10569-004-4622-z},
+  url = {https://doi.org/10.1007/s10569-004-4622-z},
+  issn = {1572-9478}
+}
+
+@article{hernandez2020,
+  title={<scp>enckehh</scp>: an integrator for gravitational dynamics with a dominant mass that achieves optimal error behaviour},
+  volume={502},
+  ISSN={1365-2966},
+  url={http://dx.doi.org/10.1093/mnras/staa3945},
+  DOI={10.1093/mnras/staa3945},
+  number={1},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  publisher={Oxford University Press (OUP)},
+  author={Hernandez, David M and Holman, Matthew J},
+  year={2020},
+  month=dec,
+  pages={556–563}
+}
+
+@article{farr2007,
+  title={Variational Integrators for the GravitationalN‐Body Problem},
+  volume={663},
+  ISSN={1538-4357},
+  url={http://dx.doi.org/10.1086/518641},
+  DOI={10.1086/518641},
+  number={2},
+  journal={The Astrophysical Journal},
+  publisher={American Astronomical Society},
+  author={Farr, Will M. and Bertschinger, Edmund},
+  year={2007},
+  month=jul, pages={1420–1433}
+}
+
+@article{yoshida1993,
+  author = {Haruo Yoshida},
+  title = {Recent progress in the theory and application of symplectic integrators},
+  journal = {Celestial Mechanics and Dynamical Astronomy},
+  year = {1993},
+  volume = {56},
+  number = {1},
+  pages = {27--43},
+  doi = {10.1007/BF00699717},
+  url = {https://doi.org/10.1007/BF00699717},
+  issn = {1572-9478}
+}
+
+@article{yoshida1990,
+title = {Construction of higher order symplectic integrators},
+journal = {Physics Letters A},
+volume = {150},
+number = {5},
+pages = {262-268},
+year = {1990},
+issn = {0375-9601},
+doi = {https://doi.org/10.1016/0375-9601(90)90092-3},
+url = {https://www.sciencedirect.com/science/article/pii/0375960190900923},
+author = {Haruo Yoshida},
+abstract = {For Hamiltonian systems of the form H = T(p)+V(q) a method is shown to construct explicit and time reversible symplectic integrators of higher order. For any even order there exists at least one symplectic integrator with exact coefficients. The simplest one is the 4th order integrator which agrees with one found by Forest and by Neri. For 6th and 8th orders, symplectic integrators with fewer steps are obtained, for which the coefficients are given by solving a set of simultaneous algebraic equations numerically.}
+}
+
+@misc{rebound_doc,
+  author = {Hanno Rein and David S. Spiegel and David Tamayo},
+  title = {REBOUND Documentation and Integrators},
+  note = {Conceptual reference to REBOUND documentation and related papers. See H. Rein and D. S. Spiegel, "IAS15: A fast, adaptive, high-order integrator for gravitational dynamics, accurate to machine precision," MNRAS, vol. 446, pp. 1424–1437, Jan. 2015; H. Rein and D. Tamayo, "WHFAST: A fast and unbiased implementation of the Wisdom-Holman algorithm for long-term gravitational simulations," MNRAS, vol. 452, pp. 376–388, Sep. 2015.},
+  year = {2025},
+  url = {https://rebound.readthedocs.io/en/latest/integrators/}
+}
+
+@article{hernandez2019b,
+  title={Should N-body integrators be symplectic everywhere in phase space?},
+  volume={486},
+  ISSN={1365-2966},
+  url={http://dx.doi.org/10.1093/mnras/stz884},
+  DOI={10.1093/mnras/stz884},
+  number={4},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  publisher={Oxford University Press (OUP)},
+  author={Hernandez, David M},
+  year={2019},
+  month=apr, pages={5231–5238}
+}
+
+@article{glasser2022,
+  title={A gauge-compatible Hamiltonian splitting algorithm for particle-in-cell simulations using finite element exterior calculus},
+  volume={88},
+  DOI={10.1017/S0022377822000290},
+  number={2},
+  journal={Journal of Plasma Physics},
+  author={Glasser, Alexander S. and Qin, Hong},
+  year={2022},
+  pages={835880202}
+  }
+
+  @misc{tu2019,
+      title={Symplectic Integrators in Corotating Coordinates},
+      author={Xiongbiao Tu and Qiao Wang and Yifa Tang},
+      year={2022},
+      eprint={2202.03779},
+      archivePrefix={arXiv},
+      primaryClass={astro-ph.IM},
+      url={https://arxiv.org/abs/2202.03779},
+}
+
+@ARTICLE{rein2019,
+       author = {{Rein}, Hanno and {Hernandez}, David M. and {Tamayo}, Daniel and {Brown}, Garett and {Eckels}, Emily and {Holmes}, Emma and {Lau}, Michelle and {Leblanc}, R{\'e}jean and {Silburt}, Ari},
+        title = "{Hybrid symplectic integrators for planetary dynamics}",
+      journal = {Monthly Notices of the Royal Astronomical Society},
+     keywords = {gravitation, methods: numerical, planets and satellites: dynamical evolution and stability, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics, Mathematics - Dynamical Systems},
+         year = 2019,
+        month = jun,
+       volume = {485},
+       number = {4},
+        pages = {5490-5497},
+          doi = {10.1093/mnras/stz769},
+archivePrefix = {arXiv},
+       eprint = {1903.04972},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.485.5490R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 %========================Propios de la plantilla ==========================
 
